--- a/about.html
+++ b/about.html
@@ -265,9 +265,9 @@
 </head>
 <body>
     <header>
-        <a href="catalog.html" class="logo">AMDF.GROUP</a>
+        <a href="index.html" class="logo">AMDF.GROUP</a>
         <div style="display: flex; align-items: center;">
-            <a href="catalog.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
+            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
             </div>
@@ -277,7 +277,7 @@
     <main>
         <section class="info-section">
             <h1>About AMDF.GROUP</h1>
-            <p>Welcome to **AMDF.GROUP**, your premier destination for captivating digital stories and a vibrant community for creative minds. We are dedicated to providing a seamless platform where talented **authors (creators)** can publish their unique narratives, and **readers** can immerse themselves in an endless array of genres and tales.</p>
+            <p>Welcome to AMDF.GROUP, your premier destination for captivating digital stories and a vibrant community for creative minds. We are dedicated to providing a seamless platform where talented authors (creators) can publish their unique narratives, and readers can immerse themselves in an endless array of genres and tales.</p>
             <p>Our mission is to foster a dynamic ecosystem that empowers creativity and enriches reading experiences. We believe in the power of storytelling to connect, inspire, and entertain across the globe.</p>
 
             <h2>Why Choose AMDF.GROUP? Our Advantages:</h2>
