--- a/terms_of_service.html
+++ b/terms_of_service.html
@@ -246,9 +246,9 @@
 </head>
 <body>
     <header>
-        <a href="catalog.html" class="logo">AMDF.GROUP</a>
+        <a href="index.html" class="logo">AMDF.GROUP</a>
         <div style="display: flex; align-items: center;">
-            <a href="catalog.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
+            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
             </div>
@@ -300,7 +300,7 @@
             <h2>Contact Us</h2>
             <p>If you have any questions about these Terms, please contact us:</p>
             <ul>
-                <li>By email: support@amdf.group</li>
+                <li>By email: info@amdf.web.id</li>
             </ul>
         </section>
     </main>
