--- a/login_register_creator.html
+++ b/login_register_creator.html
@@ -609,7 +609,7 @@
                 // If email is verified in Auth and RTDB, proceed to web_creator.html
                 showMessage("Login successful! Redirecting to creator page...", "success");
                 setTimeout(() => {
-                    window.location.href = 'web_creator.html';
+                    window.location.href = 'https://amdf.web.id/web_creator.html';
                 }, 2000);
 
             } catch (error) {
