--- a/login_register_creator.html
+++ b/login_register_creator.html
@@ -626,7 +626,7 @@
                 // Jika email sudah diverifikasi, lanjutkan ke halaman creator
                 showMessage("Login berhasil! Mengarahkan ke halaman kreator...", "success");
                 setTimeout(() => {
-                    window.location.href = 'https://amdf.web.id/web_creator.html';
+                    window.location.href = 'web_creator.html';
                 }, 2000);
 
             } catch (error) {
