--- a/login_register_creator.html
+++ b/login_register_creator.html
@@ -578,7 +578,7 @@
                 }
                 
                 // Redirect to dashboard upon successful login and verification
-                window.location.href = 'creator_dashboard.html'; // Or 'web_creator.html'
+                window.location.href = 'web_creator.html'; // Or 'web_creator.html'
                 
             } catch (error) {
                 console.error("Login error:", error);
