--- a/login_register_creator.html
+++ b/login_register_creator.html
@@ -326,9 +326,9 @@
 </head>
 <body>
     <header>
-        <a href="catalog.html" class="logo">AMDF.GROUP</a>
+        <a href="index.html" class="logo">AMDF.GROUP</a>
         <div style="display: flex; align-items: center;">
-            <a href="catalog.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
+            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
             </div>
