--- a/web_creator.html
+++ b/web_creator.html
@@ -600,9 +600,9 @@
         </div>
     </div>
     <header>
-        <a href="catalog.html" class="logo">AMDF.GROUP</a>
+        <a href="index.html" class="logo">AMDF.GROUP</a>
         <div class="header-actions">
-            <a href="catalog.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
+            <a href="index.html" class="btn-back"><i class="fas fa-arrow-left"></i> Back to Catalog</a>
             <button id="logoutButton">Logout <i class="fas fa-sign-out-alt"></i></button>
             <div class="mode-toggle" onclick="toggleDarkMode()">
                 <div class="circle"></div>
@@ -652,9 +652,9 @@
     <footer>
         <p>&copy; 2025 AMDF.GROUP. All rights reserved.</p>
         <nav>
-            <a href="#about">About Us</a> |
-            <a href="#privacy">Privacy Policy</a> |
-            <a href="#terms">Terms of Service</a>
+            <a href="about.html">About Us</a> |
+            <a href="privacy_policy.html">Privacy Policy</a> |
+            <a href="terms_of_service.html">Terms of Service</a>
         </nav>
     </footer>
 
